--- a/css/configuraciones.css
+++ b/css/configuraciones.css
@@ -6,7 +6,7 @@
 html{
     font-size: 10px;
     font-family: 'Archivo', sans-serif;
-    background-image: url(/img/FONDO.jpg);
+    background-image: url(../img/FONDO.jpg);
     background-size: cover;
 }
 :root{
